# IntervalArithmetic

./: LICENSE  README.md
IntervalArithmetic/: ErrorCode.h  Interval.cpp  Interval.h  IntervalArithmetic.cpp  Number.h
IntervalArithmetic/vs2013/: vs2013.vcxproj
IntervalArithmetic/vs2013/mpfr/: gmp.h
IntervalArithmetic/vs2015/: vs2015.vcxproj.filters
IntervalArithmeticVS/: .gitignore  CMakeLists.txt  ErrorCode.h  Interval.cpp  Interval.h  IntervalArithmetic.cpp  IntervalArithmetic.h  IntervalArithmetic2013.sln  IntervalArithmetic2015.sln  Number.h  example.cpp
IntervalArithmeticVS/vs2013/: vs2013.vcxproj.filters
IntervalArithmeticVS/vs2015/: vs2015.vcxproj
IntervalArithmeticVS/vs2015/mpfr/: config.h
IntervalArithmeticVS/vs2015/x64/Debug/: vc140.idb
IntervalArithmeticVS/vs2015/x64/Debug/vs2015.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vs2015.lastbuildstate
IntervalArithmeticVS/x64/Debug/: vs2015.ilk
